# meeting-pinger

./: .dockerignore  .env.example  .gitignore  Dockerfile  ENCRYPTED_VIDEO_PLAN.md  Makefile  README.md  deploy.sh  main.py  pyproject.toml  users.json.example
meeting_pinger/: calendar_client.py  config.py  health.py  meeting_tracker.py  models.py  scheduler.py  slack_client.py
